# approx-chol

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-MIT  NOTICE  README.md  pixi.toml  pyproject.toml
.github/workflows/: cargo-publish.yml  ci.yml  publish.yml
crates/approx-chol/: Cargo.toml  LICENSE  README.md
crates/approx-chol-py/: Cargo.toml
crates/approx-chol-py/src/: lib.rs
crates/approx-chol/benches/: conversion.rs  factorization.rs  sampling.rs  smoke.rs  solve.rs
crates/approx-chol/benches/common/: mod.rs
crates/approx-chol/examples/: ac2_config.rs  basic_solve.rs  compare_native.rs
crates/approx-chol/examples/shared/: mod.rs
crates/approx-chol/src/: approx_chol.rs  csr.rs  error.rs  graph.rs  lib.rs  low_level.rs  ordering.rs  sampling.rs  star_clique.rs  test_utils.rs  types.rs
crates/approx-chol/src/approx_chol/: builder.rs  clique_tree.rs  decomposition.rs  dedup.rs  sampled_column.rs  star.rs  star_ac.rs  star_ac2.rs
crates/approx-chol/src/approx_chol/builder/: tests.rs
crates/approx-chol/src/approx_chol/dedup/: tests.rs
crates/approx-chol/src/approx_chol/star/: tests.rs
crates/approx-chol/tests/: csr_validation.rs  faer_integration.rs  generic_low_level_api.rs  ingestion_regressions.rs  property_csr.rs  property_factorization.rs  serde_roundtrip.rs  smoke_ac_ac2.rs  solve_quality.rs  sprs_integration.rs
crates/approx-chol/tests/common/: grid.rs  laplacian_prop.rs  mod.rs  panic_err.rs  panic_ok.rs  path.rs
examples/: scipy_cg.py
python/: README.md
python/approx_chol/: __init__.py  __init__.pyi
scripts/: compare_native.jl  compare_native.sh
tests/: _ext_loader.py  _laplacians.py  test_linear_operator_interface.py  test_preconditioner_effectiveness.py  test_python_regressions.py  test_python_smoke.py  test_python_validation.py
